# preflight

./: .env.example  .gitignore  ARCHITECTURE.md  AUTORESEARCH-SYNTHESIS.md  CLAUDE.md  COMPETITIVE-ANALYSIS.md  DIGITAL-PATHOLOGY.md  DOCUMENTATION-PLAN.md  FIRST-RUN.md  Makefile  PANEL-SYNTHESIS-v2.md  PREFLIGHT.md  PROMPTS-v2.md  PROMPTS.md  README.md  ZiRA-Reference.md  alembic.ini  docker-compose.yml  preflight  pyproject.toml
alembic/: env.py
alembic/versions/: 7dbce67b87f1_initial_schema.py  a1b2c3d4e5f6_add_parent_versie_columns.py
experiment/: config.json  program.md  qa_ground_truth.json  results.tsv
personas/: ea-council-personas.mjs
scripts/: init-db.sql  seed.py
src/preflight/api/: __init__.py  app.py
src/tests/: test_citation.py  test_classify.py  test_docgen.py  test_embedding.py  test_enhanced_features.py  test_integration.py  test_integration_clients.py  test_models.py  test_new_features.py  test_pipeline.py  test_quickscan.py  test_rag_enhancements.py  test_session_fixes.py  test_smoke_e2e.py
synthesis/: archimate.mjs  clarification.mjs  diagrams.mjs  engine.mjs  pipeline.mjs
templates/: adr.md  bia-biv.md  clinical-impact.md  decommission-checklist.md  dpia.md  eu-ai-act.md  integration-design.md  network-impact.md  nfr-specification.md  operational-readiness.md  process-impact.md  psa.md  roadmap-impact.md  security-assessment.md  tech-radar-update.md  vendor-assessment.md
tests/: test_archi_mcp.py  test_authority.py  test_corrections.py  test_model_builder.py  test_model_types.py  test_product_extractor.py  test_review_and_exchange.py
(+78 files in other folders)
