[project]
name = "preflight"
version = "0.1.0"
description = "EA intake and pre-assessment tool for Dutch hospitals"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
parsing = ["pymupdf>=1.24", "markitdown>=0.1", "unstructured>=0.12"]
rag = ["asyncpg>=0.29", "sentence-transformers>=3.0", "chonkie>=1.0"]
auth = ["PyJWT>=2.8", "cryptography>=42.0"]
smart-parse = ["llama-parse>=0.4"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "alembic>=1.13", "greenlet>=3.0"]

[project.scripts]
preflight = "preflight.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["preflight*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]